Frontend support for `rx serve` mode.
**Features:** • **Multi-file viewer with tabs** - View multiple files
simultaneously with tab management and drag-and-drop reordering •
**Advanced search capabilities** - In-file text search with match
highlighting and navigation; global trace search across configured roots
with regex support • **Syntax highlighting and filtering** - Toggle-able
syntax highlighting; regex-based content filtering with
hide/show/highlight modes • **Invisible characters display mode** -
Toggle to visualize spaces (·), tabs (→), carriage returns (⏎),
non-breaking spaces (°), and zero-width characters (|) • **Virtual
scrolling for large files** - Efficient on-demand content loading with
adjustable lines per page; support for compressed files (gz, zst, xz,
bz2) • **File tree browser with analysis** - Hierarchical directory
navigation with context actions to analyze file statistics and create
line-offset indexes • **Theme support and customization** -
Light/dark/system themes; configurable font size, line numbers, and
keyboard shortcuts

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ripgrep
 
+      - name: Build frontend
+        run: make frontend-build
+
       - name: Install dependencies
         run: uv sync
 
