--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,21 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/rx"]
+exclude = [
+    "src/rx/frontend/node_modules/**",
+    "src/rx/frontend/src/**",
+    "src/rx/frontend/public/**",
+    "src/rx/frontend/*.json",
+    "src/rx/frontend/*.ts",
+    "src/rx/frontend/*.js",
+    "src/rx/frontend/*.md",
+    "src/rx/frontend/*.html",
+    "src/rx/frontend/.gitignore",
+    "src/rx/frontend/bun.lock",
+]
+
+[tool.hatch.build.targets.wheel.force-include]
+"src/rx/frontend/dist" = "rx/frontend/dist"
 
 [dependency-groups]
 dev = [
