--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,7 @@ jobs:
           apt-get install -y curl git build-essential libssl-dev zlib1g-dev \
             libbz2-dev libreadline-dev libsqlite3-dev wget llvm \
             libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev \
-            libffi-dev liblzma-dev ca-certificates zstd
+            libffi-dev liblzma-dev ca-certificates zstd unzip
         env:
           DEBIAN_FRONTEND: noninteractive
           TZ: Etc/UTC
@@ -111,6 +111,33 @@ jobs:
         uses: astral-sh/setup-uv@v4
         with:
           enable-cache: true
+
+      - name: Install Bun in container
+        if: steps.should_build.outputs.should_run == 'true' && matrix.container == 'ubuntu:20.04'
+        run: |
+          curl -fsSL https://bun.sh/install | bash
+        env:
+          BUN_INSTALL: /root/.bun
+
+      - name: Install Bun
+        if: steps.should_build.outputs.should_run == 'true' && matrix.container == null
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Build frontend in container
+        if: steps.should_build.outputs.should_run == 'true' && matrix.container == 'ubuntu:20.04'
+        run: |
+          cd src/rx/frontend
+          /root/.bun/bin/bun install
+          /root/.bun/bin/bun run build
+
+      - name: Build frontend
+        if: steps.should_build.outputs.should_run == 'true' && matrix.container == null
+        run: |
+          cd src/rx/frontend
+          bun install
+          bun run build
 
       - name: Install dependencies in container
         if: steps.should_build.outputs.should_run == 'true' && matrix.container == 'ubuntu:20.04'
@@ -162,7 +189,7 @@ jobs:
       - name: Run tests (Windows - skip problematic tests)
         if: steps.should_build.outputs.should_run == 'true' && matrix.os == 'windows-latest'
         run: |
-          uv run pytest --ignore=tests/test_endpoints.py --ignore=tests/test_analyse.py --ignore=tests/test_analyse_cache.py --ignore=tests/test_analyse_compressed.py --ignore=tests/test_compressed_index.py --ignore=tests/test_index.py --ignore=tests/test_parse.py --ignore=tests/test_seekable_zstd.py
+          uv run pytest --ignore=tests/test_endpoints.py --ignore=tests/test_analyse.py --ignore=tests/test_analyse_cache.py --ignore=tests/test_analyse_compressed.py --ignore=tests/test_compressed_index.py --ignore=tests/test_index.py --ignore=tests/test_parse.py --ignore=tests/test_seekable_zstd.py --ignore=tests/test_tree_endpoint.py
 
       - name: Build with PyInstaller in container
         if: steps.should_build.outputs.should_run == 'true' && matrix.container == 'ubuntu:20.04'
